# meltano-tap-cratedb

./: .gitignore  CHANGES.md  README.md  pyproject.toml
.github/workflows/: main.yml
tap_cratedb/: __init__.py  client.py  patch.py  tap.py
tests/: conftest.py  settings.py  test_core.py  test_replication_key.py  test_selected_columns_only.py  test_ssh_tunnel.py  test_tap.py
tests/resources/: cratedb-summits.json
