[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "meltano-tap-cratedb"
description = "A Singer tap / Meltano extractor for CrateDB, built with the Meltano SDK, and based on the Meltano PostgreSQL tap."
readme = "README.md"
keywords = [
  "CrateDB",
  "data-loading",
  "data-processing",
  "data-toolkit",
  "data-transfer",
  "data-transformation",
  "ELT",
  "ETL",
  "io",
  "Meltano",
  "Meltano SDK",
  "PostgreSQL",
  "Singer",
]
authors = [
  { name = "CrateDB Engineering", email = "office@crate.io" },
]
requires-python = ">=3.9,<3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Benchmark",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "importlib-resources; python_version<'3.9'",
  "meltanolabs-tap-postgres<0.9",
  "singer-sdk<0.54,>=0.48",
  "sqlalchemy-cratedb<0.42",
]
optional-dependencies.develop = [
  "black<27",
  "mypy<1.20",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "validate-pyproject<1",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "faker<38,>=18.5.1",
  "pendulum<4,>=2.1",
  "pytest",
  "pytest-cov<8",
  "pytest-mock<4",
  "singer-sdk[testing]",
]
urls.changelog = "https://github.com/crate/meltano-tap-cratedb/blob/main/CHANGES.md"
urls.documentation = "https://github.com/crate/meltano-tap-cratedb"
urls.homepage = "https://github.com/crate/meltano-tap-cratedb"
urls.repository = "https://github.com/crate/meltano-tap-cratedb"
scripts.tap-cratedb = "tap_cratedb.tap:TapCrateDB.cli"

[tool.setuptools]
include-package-data = true
packages.find.namespaces = false
packages.find.exclude = [ "tests" ]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
extend-exclude = [  ]
lint.select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  # Pyflakes
  "F",
  # return
  "RET",
  "W",
]
lint.extend-ignore = [
  # Probable insecure usage of temporary file or directory
  "S108",
  # Unnecessary `elif` after `return` statement
  "RET505",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # zip() without an explicit strict= parameter
  "B905",
]
lint.per-file-ignores."tests/**" = [
  "S101", # Allow use of `assert`, and `print`.
  "S608", # Possible SQL injection vector through string-based query construction.
]

[tool.pytest]
ini_options.addopts = """
  -rfEXs --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
ini_options.minversion = "2.0"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
ini_options.testpaths = [
  "examples",
  "tap_cratedb",
  "tests",
]
ini_options.xfail_strict = true
ini_options.markers = [  ]

[tool.coverage]
report.fail_under = 80
report.show_missing = true
run.branch = false
run.omit = [
  "tests/*",
]
run.source = [ "tap_cratedb" ]

[tool.mypy]
packages = [ "tap_cratedb" ]
exclude = [  ]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.poe]
# ===================
# Tasks configuration
# ===================

tasks.check = [
  "lint",
  "test",
]
tasks.format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff check ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload dist/*" },
]
tasks.test = { cmd = "pytest" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
